TL-10702 theme_roots: Ensures long words break in vertical tabs
Reviewed-on: https://review.totaralms.com/12932
Tested-by: Jenkins Automation <jenkins@totaralms.com>

--- a/theme/roots/less/totara/navs.less
+++ b/theme/roots/less/totara/navs.less
@@ -141,11 +141,12 @@
       border-bottom: 0;
 
       > li {
-      float: none;
+        float: none;
 
         a {
-        border-radius: @border-radius-base 0 0 @border-radius-base;
-        margin-right: -1px;
+          border-radius: @border-radius-base 0 0 @border-radius-base;
+          margin-right: -1px;
+          word-wrap: break-word;
         }
       }
 
